[project]
name = "minute-physics"
version = "0.1.0"
description = "Recreating range charts in Plotly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.0.0rc0",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "black[jupyter]>=24.10.0",
    "nbformat>=5.10.4",
    "ipykernel>=7.0.0a0",
    "requests>=2.32.3",
]
